[package]
name = "textpocalypse"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/*",
]

[dependencies]
core-logic = { path = "crates/core-logic" }
anyhow = "1.0.75"
log = "0.4.20"
env_logger = "0.10.1"
crossterm = "0.27.0"
voca_rs = "1.15.2"
itertools = "0.12.0"
futures = "0.3.29"
flume = "0.11.0"
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
comfy-table = "7.1.0"
