[package]
name = "textpocalypse"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/*"]

[dependencies]
core-logic = { path = "crates/core-logic" }
anyhow = "1.0.86"
log = "0.4.22"
env_logger = "0.11.5"
crossterm = "0.28.1"
voca_rs = "1.15.2"
itertools = "0.13.0"
futures = "0.3.30"
flume = "0.11.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["full"] }
comfy-table = "7.1.1"
strum = "0.26.3"
