[package]
name = "core-logic"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
flume = "0.11.0"
lazy_static = "1.4.0"
regex = "1.10.2"
log = "0.4.20"
bevy_ecs = "0.12.1"
itertools = "0.12.0"
float-cmp = "0.9.0"
strum = { version = "0.25.0", features = ["derive"] }
voca_rs = "1.15.2"
nom = "7.1.3"
map-range = "0.1.2"
